--- a/src/main/resources/application-dev1.yml
+++ b/src/main/resources/application-dev1.yml
@@ -1,6 +1,6 @@
 spring:
    datasource:
-      url: jdbc:mysql://localhost:3306/webdiary
+      url: jdbc:mysql://localhost:3306/webdiary?useUnicode=true&characterEncoding=utf-8
       username: root
       password: 
       driver-class-name: com.mysql.cj.jdbc.Driver
